--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 	width: auto;
 	max-width: 900px;
 	padding: 20px 30px;
-	border-radius: 10px;  	/* rounder corners*/
+	border-radius: 10px;  	/* rounded corners*/
 	background-color: rgba(255, 255, 255, 0.27);
 	box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
@@ -82,7 +82,6 @@ button:active {
 	font-size: 1.5rem;
 }
 
-/* Loader  */
 .loader {
   border: 16px solid ivory;
   border-top: 16px solid mediumpurple;
